--- a/gb/17/8/20/n9548576.md
+++ b/gb/17/8/20/n9548576.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/viliqq330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/viliqq330/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>工党发表水政策 农场主脸吓白了</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/550255109.jpg" />
 <h6>恒天然在北岛西海岸的牧场。(Minehan/ullstein bild via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2017年08月21日讯】（大纪元记者李扪心综合报导）<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">工党</a>上周宣布，如果9月份大选后执政，将会对商业用水收取费用。新党魁嘉欣达?阿丹（Jacinda Ardern）证实，工党将通过对农民和瓶装水公司等收取水税的收入，在几十年内帮助清理新西兰的河流。</p>
-<p>不过，<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">工党</a>并没有给出具体数字目，只是说，水税的收取，会因水资源短缺程度和水的质量不同而有所不同。阿丹说，她将在执政后的100天内举行圆桌会议，讨论<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E6%B0%B4%E6%94%BF%E7%AD%96.md#1">水政策</a>，再决定具体收取多少使用费用。</p>
+<p>【大纪元2017年08月21日讯】（大纪元记者李扪心综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">工党</a>上周宣布，如果9月份大选后执政，将会对商业用水收取费用。新党魁嘉欣达?阿丹（Jacinda Ardern）证实，工党将通过对农民和瓶装水公司等收取水税的收入，在几十年内帮助清理新西兰的河流。</p>
+<p>不过，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">工党</a>并没有给出具体数字目，只是说，水税的收取，会因水资源短缺程度和水的质量不同而有所不同。阿丹说，她将在执政后的100天内举行圆桌会议，讨论<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B0%B4%E6%94%BF%E7%AD%96.md#1">水政策</a>，再决定具体收取多少使用费用。</p>
 <p>而在本周，媒体爆出又一家中国公司在丰盛湾申请许可，要把新西兰著名的Otakiri泉水装瓶，运到中国贩售。据信目前的法规无法让这家公司缴纳费用。</p>
 <p><strong>到底要交多少水费？</strong></p>
 <p>初级产业部部长内森?盖（Nathan Guy）说，工党的水税超乎想像。他根据自己做农民的经验推测，每生产1升牛奶，需要400升水，如果每升水收10分钱的话，那400升水就要交40元钱，也就是说使用40元钱的水才能产出1升牛奶，他认为这是工党没有常识的不正常表现。</p>
 <p>工党自然资源及环境发言人戴维?帕克（David Parker）解释说，对于瓶装水公司用水，可能会根据水的质量，每升收取1-2分钱；但对于农牧业灌溉用水，水税不会以每升来计算，很有可能是每立方米收取1分钱。而每个立方米里有1000升，这样每产出1升牛奶只需要0.4分水费，所以正常的农业用水的费用，应该不是大问题。</p>
 <p>但新西兰灌溉协会总裁安德鲁?柯蒂斯（ Andrew Curtis）说，其实，农民早已经支付了灌溉水的费用。 新西兰灌溉协会每两年都会计算灌溉计划供水的平均成本，2016年，平均每公顷农用地的灌溉花费为780元，相当于每立方米的灌溉水要花费14分钱，农民的负担已经很重。</p>
 <p>这个数字包括用水许可证和资源许可证的成本、增加的地税（这是因为灌溉农田的价格更高），再加上使用水所需要的基础设施的花费等等。柯蒂斯说，，一个100公顷生产牛羊肉的灌溉牧场的地税，要比相应的干旱牧场的地税，高出5到10倍。</p>
-<p>农民联合会的水务发言人克里斯?艾伦（Chris Allen）也说，这项政策将阻碍农民对基础设施的投资，这将对农牧社区产生不良影响。为了建设农场里6公里的灌溉管道，他花了大约200万元，这对于一般的<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%86%9C%E5%9C%BA%E4%B8%BB.md#1">农场主</a>来说，是个不小的数目。</p>
+<p>农民联合会的水务发言人克里斯?艾伦（Chris Allen）也说，这项政策将阻碍农民对基础设施的投资，这将对农牧社区产生不良影响。为了建设农场里6公里的灌溉管道，他花了大约200万元，这对于一般的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%86%9C%E5%9C%BA%E4%B8%BB.md#1">农场主</a>来说，是个不小的数目。</p>
 <p>新西兰的灌溉农田主要集中在东海岸，南岛东海岸的坎特伯雷地区，占了全国总灌溉农田的65%。灌溉农田需要投资用于灌溉的基础设施，还要购买可以使用水的份额。</p>
 <p><strong>农民：收水税会使什么都贵</strong></p>
-<p>艾伦表示，工党的<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E6%B0%B4%E6%94%BF%E7%AD%96.md#1">水政策</a>“吓倒了”农民。艾伦说，如果每升水收10分钱的税，就会导致农民破产、削弱区域经济和出口竞争力。考虑到农场水的大使用量，就算是这个数字的千分之一，最终的费用也将是“高得吓人”。</p>
+<p>艾伦表示，工党的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B0%B4%E6%94%BF%E7%AD%96.md#1">水政策</a>“吓倒了”农民。艾伦说，如果每升水收10分钱的税，就会导致农民破产、削弱区域经济和出口竞争力。考虑到农场水的大使用量，就算是这个数字的千分之一，最终的费用也将是“高得吓人”。</p>
 <p>他说，工党的水税会让消费者花更多的钱购买食品，也会让当地的农产品与进口产品相比，处于不利地位。</p>
 <p>柯蒂斯则预计，水税会增加食品、饮料、住房和许多其它物品的价格，这无疑将会影响到每个新西兰人。</p>
 <p>新西兰园艺协会总裁迈克?查普曼（Mike Chapman），则希望工党“不要这样做”，他把工党的选举口号“让我们这样做”的中间，加了一个不字（not）来开玩笑，其实也真的表达了果园场主们的担心。</p>
@@ -48,42 +48,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/11/11/n3427488.md#1">能源开发与环境保护成纽大选重要话题</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/11/15/n3431003.md#1">[新西兰大选] 劳工党党魁谈论该党政策</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/11/20/n3435951.md#1">纽各政党公开增加工作机会政策</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/11/20/n3435952.md#1">纽选民不支持两大党主要竞选政策</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/11/22/n3437395.md#1">纽两大党选前辩论 彼德斯入阁成话题</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/12/1/n3444994.md#1">纽2011大选投票率百年最低</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/11/12/14/n3456954.md#1">纽大选结果有变 国会席位最终敲定</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/14/9/18/n4251301.md#1">新西兰大选在即 “凯伊”车牌无人问津</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/14/9/20/n4253417.md#1">新西兰大选 执政党庆祝三连胜</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297426.md#1">第 6 起隔离点逃脱事件发生在奥克兰市中心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/11/11/n3427488.md#1">能源开发与环境保护成纽大选重要话题</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/11/15/n3431003.md#1">[新西兰大选] 劳工党党魁谈论该党政策</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/11/20/n3435951.md#1">纽各政党公开增加工作机会政策</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/11/20/n3435952.md#1">纽选民不支持两大党主要竞选政策</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/11/22/n3437395.md#1">纽两大党选前辩论 彼德斯入阁成话题</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/12/1/n3444994.md#1">纽2011大选投票率百年最低</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/12/14/n3456954.md#1">纽大选结果有变 国会席位最终敲定</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/9/18/n4251301.md#1">新西兰大选在即 “凯伊”车牌无人问津</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/9/20/n4253417.md#1">新西兰大选 执政党庆祝三连胜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/15/n13647636.md#1">机构暂停解雇未接种员工 包括奥克兰市议会</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/viliqq330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/19/n10071544.md#1" target="_blank">唐恩：从天安门自焚骗局看善恶有报</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/24/n12280824.md#1">【内幕】习恭维之计失效 川普发反共檄文</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293985.md#1">美国关中领馆效应 亲共者大难临头各自飞</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12295214.md#1">李登辉生前称共产主义骗人 曾评价习近平</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291118.md#1">身高18公尺 日本钢弹机器人跨出第一步</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12296166.md#1">杜汶泽悼念李登辉：台湾之父一路好走</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283826.md#1">散文：忆香港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/20/n9548576.htm">工党发表水政策 农场主脸吓白了</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/20/n9548576.htm">工党发表水政策 农场主脸吓白了</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/viliqq330/djy/blob/master/gb/17/8/20/n9548576.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/8/20/n9548576.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
